--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/images/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
