--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist",
-    "preview": "npx http-server dist"
+    "serve": "http-server dist"
   },
   "keywords": [],
   "author": "YOUR_NAME <yourmail@mail.com>",
