--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,20 @@
 {
   "name": "Fora | Food Rate",
   "short_name": "FORA",
-  "start_url": "/index.html",
+  "description": "Food Rate App",
+  "start_url": "./",
   "display": "standalone",
-  "background-color": "#ffffff",
+  "background_color": "#ffffff",
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/images/icon.png",
+      "src": "/images/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
