--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist"
+    "serve": "http-server dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://github.com/alvinkrisnaryn/project-fora-dicoding",
   "keywords": [],
   "author": "YOUR_NAME <yourmail@mail.com>",
   "license": "ISC",
@@ -24,5 +27,8 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "idb": "^8.0.3"
   }
 }
